@@ -48,8 +48,8 @@ Ctrl+Shift+F      = ViewFixedFont
 # Auto-complete, call-tips, etc.
 Alt+/             = <<expand-word>>
 Ctrl+Space   = <<expand-word>>
-Shift+(           = <<paren-open>>
-Shift-)           = <<paren-close>>
+(           = <<paren-open>>
+)           = <<paren-close>>
 Up                = <<check-calltip-cancel>>
 Down              = <<check-calltip-cancel>>
 Left              = <<check-calltip-cancel>>
